# ykflow

./: CMakeLists.txt  README
cmake-txt/: CMakeLists_mrsteam.txt  CMakeLists_srn.txt
include/: #basisfunc.h#  #injection.h#  #ks_GMRES.h#  #struct_def.h#  #yk_YKFlow.h#  basisfunc.h  getBDFCoef.h  injection.h  ks_ApplyTimeScheme.h  ks_Residual.h  ks_adjoint_MATVEC.h  ks_adjoint_Unsteady.h  ks_copyUtype.h  ks_createHROMOLD.h  ks_dRdU.h  ks_dres_advection.h  ks_dres_burgers.h  ks_dres_diffusion.h  ks_dres_fourth_IPDG.h  ks_dres_lagrange.h  ks_dres_tangent.h  ks_errorEstimate.h  ks_errorFind.h  ks_function.h  ks_gaussNewtonSolve.h  ks_greedyAlgorithm.h  ks_implicitTimeSolver.h  ks_initialConditions.h  ks_jbaraverage.h  ks_mass.h  ks_offlineMatrix.h  ks_podv2.h  ks_read_solution_file.h  ks_res_advection.h  ks_res_burgers.h  ks_res_diffusion.h  ks_res_fourth_IPDG.h  ks_res_lagrange.h  ks_res_tangent.h  qRFactorization.h  (+18 more)
mesh/: naca_next_0.gri  naca_next_1.gri  naca_next_2.gri  naca_next_3.gri  naca_next_4.gri  naca_next_5.gri  naca_next_6.gri
prog/: #test.c#  #yk_YKFlow.c#  #yk_main2D.c#  #yk_xflo#  #yk_xflowSTLSPG.c#  #yk_xflowSTLSPGwrong.c#  #yuki.txt#  .#yk_xflowSTLSPG.c  a.out  ks_main.c  main  test.c  yk_YKFlow.c  yk_main2D (original).c  yk_main2D.c  yk_main2DOLD.c  yk_sensitivityLSS.c  yk_xflowSTLSPG.c  yk_xflowSTLSPG.c~  yk_xflowSTLSPGREADWORKING.c  yk_xflowSTLSPGwrong.c
prog/a.out.dSYM/Contents/Resources/DWARF/: a.out
runs/cases/: createParam.py  naca.eqn  naca.geom  naca.inp  naca.job  nacatri_fine.gri  readLinearRegressMat.py  run_ykflow_create.py
runs/cases/naca_FOM_dat/: naca_TimeHist.txt
src/: #ks_GMRES.c#  #ks_createHROM.c#  #ks_createHROMOLD.c#  #ks_greedyAlgorithm.c#  #ks_mass.c#  #ks_podv2.c#  #ks_res_advection.c#  #qRFactorization.c#  #read_file.c#  #tools.c#  #yk_createHROM.c#  #yk_gaussNewtonSolve.c#  #yk_performPOD.c#  #yk_solverCFD.c#  .#qRFactorization.c  basisfunc.c  getBDFCoef.c  injection.c  ks_ApplyTimeScheme.c  ks_GMRES.c  ks_Residual.c  ks_adjoint_MATVEC.c  ks_adjoint_Unsteady.c  ks_copyUtype.c  ks_createHROMGETOUT.c  ks_dJdU.c  ks_dRdU.c  ks_dres_advection.c  ks_dres_burgers.c  ks_dres_diffusion.c  ks_dres_fourth_IPDG.c  ks_dres_lagrange.c  ks_dres_tangent.c  ks_errorEstimate.c  ks_errorFind.c  ks_function.c  ks_gaussNewtonSolve.c  ks_greedyAlgorithm.c  ks_implicitTimeSolver.c  ks_initialConditions.c  (+38 more)
xflow_add/: xf_Residual.c  xf_ResidualNewDG.c  xf_ResidualNewDG.h
